<resources>
    <string name="app_name">AircraftWar</string>
    <string name="login_button">登录</string>
    <string name="login_title">登录</string>
    <string name="register_button">注册</string>
    <string name="login_text">未登录</string>
    <string name="account">用户名</string>
    <string name="mult_button">联机</string>
    <string name="easy_button">简单</string>
    <string name="normal_button">普通</string>
    <string name="hard_button">困难</string>
    <string name="music_check_box">开启音乐</string>
    <string name="delete_record_button">删除记录</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="gameover_message">游戏结束，请输入玩家名</string>



</resources>